fix: search results pad shift on mobile

--- a/public/components/Header/Header.scss
+++ b/public/components/Header/Header.scss
@@ -92,9 +92,6 @@
         .header__menu-opener {
             visibility: visible;
         }
-        .header__search-pad {
-            left: 30%;
-        }
     }
 }
 
